--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -24,13 +24,13 @@ jobs:
           echo "user=${{ steps.app-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
           echo "email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
           echo "full=${{ steps.app-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
-      - run: |
-          echo "committer user is ${{ steps.committer.outputs.user }}"
-          echo "committer email is ${{ steps.committer.outputs.email }}"
-          echo "committer string is ${{ steps.committer.outputs.full }}"
-      - run: |
-          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+      # - run: |
+      #     echo "committer user is ${{ steps.committer.outputs.user }}"
+      #     echo "committer email is ${{ steps.committer.outputs.email }}"
+      #     echo "committer string is ${{ steps.committer.outputs.full }}"
+      # - run: |
+      #     git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+      #     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
 
       - id: metadata
         uses: dependabot/fetch-metadata@v2
@@ -57,7 +57,6 @@ jobs:
             echo "Failed to get package info"
             exit 1
           fi
-
       - id: add_changeset
         uses: ktarmyshov/github-actions/actions/add_pr_changeset@14a4ec0614dffcafcdc429004489877c54bd0c81
         with:
