--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,6 +6,11 @@ permissions:
   pull-requests: write
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - run: ${{ tojson(github) }}
+        shell: cat {0}
   dependabot:
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'dependabot[bot]'
@@ -19,18 +24,20 @@ jobs:
         run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
-      - id: committer
-        run: |
-          echo "user=${{ steps.app-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
-          echo "email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
-          echo "full=${{ steps.app-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
+      - run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+      # - id: committer
+      #   run: |
+      #     echo "user=${{ steps.app-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
+      #     echo "email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
+      #     echo "full=${{ steps.app-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
       # - run: |
       #     echo "committer user is ${{ steps.committer.outputs.user }}"
       #     echo "committer email is ${{ steps.committer.outputs.email }}"
       #     echo "committer string is ${{ steps.committer.outputs.full }}"
-      # - run: |
-      #     git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-      #     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
 
       - id: metadata
         uses: dependabot/fetch-metadata@v2
@@ -46,27 +53,17 @@ jobs:
           # This fails with the push command
           # persist-credentials: false
 
-      # TODO: pack these two steps into a single action with output from dependabot/fetch-metadata: .outputs.updated-dependencies-json
-      - id: get-package-info
-        run: |
-          PKG_NAME=$(jq -r '.name' package.json)
-          PKG_VERSION=$(jq -r '.version' package.json)
-          echo "name=$PKG_NAME" >> $GITHUB_OUTPUT
-          echo "version=$PKG_VERSION" >> $GITHUB_OUTPUT
-          if [ -z "$PKG_NAME" ] || [ -z "$PKG_VERSION" ]; then
-            echo "Failed to get package info"
-            exit 1
-          fi
-      - id: add_changeset
-        uses: ktarmyshov/github-actions/actions/add_pr_changeset@14a4ec0614dffcafcdc429004489877c54bd0c81
+      - uses: ./.github/actions/dependabot-npm-generate-changesets
         with:
-          token: ${{ steps.app-token.outputs.token }}
-          package-name: ${{ steps.get-package-info.outputs.name }}
-          version-update: patch
-          changeset-message: "${{ github.event.pull_request.title }}"
-          commit-user: ${{ steps.committer.outputs.user }}
-          commit-email: ${{ steps.committer.outputs.email }}
-          commit-message: "Add changeset for Dependabot PR"
+          updated-dependencies-json: ${{ steps.metadata.outputs.updated-dependencies-json }}
+          version-update-map: '{"semver-patch": "patch", "semver-minor": "patch", "semver-major": "patch"}'
+
+      - run: |
+          git add .changeset
+          git commit -m "Add changesets for Dependabot PR"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: Enable auto-merge for Dependabot PRs
         if: |
