--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -43,7 +43,7 @@ runs:
           DEP_UPDATE_TYPE=$(_jq '.updateType') 
           # version-update:semver-major, version-update:semver-minor, version-update:semver-patch => semver-major, semver-minor, semver-patch
           DEP_SEMVER_TYPE=$(echo $DEP_UPDATE_TYPE | cut -d':' -f2)
-          DEP_CHANGESET_TYPE=$(echo "${{ inputs.version-update-map }}" | jq -r '."${DEP_SEMVER_TYPE}"')
+          DEP_CHANGESET_TYPE=$(echo "${{ inputs.version-update-map }}" | jq -r --arg semver_type "$DEP_SEMVER_TYPE" '.[$semver_type]')
           # changeset file = ./.changeset/<directory-with-replaced-special-symbols>-<package-name>.md
           CHANGESET_FILE="./.changeset/${PKG_DIR//\//-}-${PKG_NAME}.md"
           # if file does not exist, create it
